Fixed: z-index of Video popupOverlay

--- a/themes/inbeat/assets/scss/partials/_popup.scss
+++ b/themes/inbeat/assets/scss/partials/_popup.scss
@@ -27,7 +27,7 @@
 	align-items: center;
 	&.popupOverlay--fadeIn {
 		opacity: 1;
-		z-index: 100;
+		z-index: 300;
 	}
 	.popup {
 		height: auto;
